# Manos

./: .clangd  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  graphics_renderer.cpp  proot_emulation.cpp
app/src/main/java/com/monos/app/: MainActivity.kt
app/src/main/java/com/monos/app/di/: AppModule.kt
app/src/main/java/com/monos/app/network/: DownloadStatus.kt  DriveDownloaderRepository.kt
app/src/main/java/com/monos/app/ui/: MainScreen.kt  X11DisplayViewModel.kt
app/src/main/java/com/monos/app/ui/components/: AdbScriptExportDialog.kt  CustomKeyboardOverlay.kt  IDisplayServer.kt  PointerInputHandler.kt  VncDisplayClient.kt  X11CanvasView.kt  X11DisplayServer.kt
app/src/main/java/com/monos/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/monos/app/virtualization/: ClipboardSyncManager.kt  ContingencyManager.kt  LocalAdbService.kt  ProotRunner.kt  UbuntuTelemetryService.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
